fix: align Lumo CSS with JS version

--- a/packages/vaadin-lumo-styles/src/components/master-detail-layout.css
+++ b/packages/vaadin-lumo-styles/src/components/master-detail-layout.css
@@ -6,21 +6,16 @@
 @media lumo_components_master-detail-layout {
   :host(:is([drawer], [stack])) [part='detail'] {
     background-color: var(--lumo-base-color);
+    box-shadow:
+      0 0 0 1px var(--lumo-shade-5pct),
+      var(--lumo-box-shadow-m);
   }
 
-  :host([drawer]) [part='detail'] {
-    box-shadow: var(--lumo-box-shadow-s);
+  [part='detail'] {
+    border-color: var(--lumo-contrast-10pct);
   }
 
-  :host([drawer][orientation='horizontal']) [part='detail'] {
-    border-inline-start: 1px solid var(--lumo-contrast-10pct);
-  }
-
-  :host([drawer][orientation='vertical']) [part='detail'] {
-    border-block-start: 1px solid var(--lumo-contrast-10pct);
-  }
-
-  :host([drawer]) [part='backdrop'] {
+  [part='backdrop'] {
     background-color: var(--lumo-shade-20pct);
   }
 }
